<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
            android:contentDescription="@string/profile_pic"
            android:layout_margin="@dimen/normal"
            android:layout_gravity="center"
            android:src="@mipmap/ic_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_margin="@dimen/normal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/header"
            android:textAlignment="center"
            android:text="@string/offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:background="@drawable/rounded_button"
            android:layout_margin="@dimen/normal"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/tryagain"
            android:id="@+id/btnTryagain"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"/>

</LinearLayout>